deployables/teamcity-server/teamcity-pod/base/teamcity-deployment-agent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teamcity-agent-instance
  namespace: teamcity-server
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  selector:
    matchLabels:
      app: teamcity-agent-instance
  replicas: 0
  template:
    metadata:
      labels:
        app: teamcity-agent-instance
    spec:
      containers:
        - name: teamcity-instance
          securityContext:
            #Running as privileged an root for Docker in Docker, Please note this is not secure.
            runAsUser: 0
            privileged: true
          resources:
            requests:
              memory: "1024Mi"
              cpu: "750m"
            limits:
              memory: "2048Mi"
              cpu: "1"   
          image: >-
            docker.io/jetbrains/teamcity-agent:2021.2.3-linux-sudo         
          ports:
            - containerPort: 9090
      volumes:
        - name: dind-storage
          emptyDir: {}
        - name: dind-socket
          emptyDir: {}
