deployables/teamcity-server/teamcity-pod/base/teamcity-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: teamcity-server-instance
  namespace: teamcity-server
spec:
  to:
    kind: Service
    name: teamcity-server-instance
    weight: 100
  port:
    targetPort: 8111
  wildcardPolicy: None
